# Saxion

./: .gitattributes  README.md
Jaar 1/: README.md
Jaar 1/Introductie Programmeren/src/StuffYouHadToTurnInButDidnt/: StupidNumberGuessingGame.java
Jaar 1/Introductie Programmeren/src/week_3/: Opdracht10.java  Opdracht12Dice.java  Opdracht13HoofdRekenen.java  Opdracht5.java  Opdracht6.java  Opdracht7.java  Opdracht8.java  Opdracht9.java
Jaar 1/Introductie Programmeren/src/week_4/: Opdracht10MirroredPyramid.java  Opdracht11GoBoard.java  Opdracht1EenTotHonderd.java  Opdracht2VijftigTotEen.java  Opdracht3Discount.java  Opdracht4SimplePostal.java  Opdracht5AdvancedPostal.java  Opdracht6Pyramid.java  Opdracht7DieToss.java  Opdracht8DiceToss.java  Opdracht9Radius.java
Jaar 1/Introductie Programmeren/src/week_5/: MasterMind.java  Opdracht1.java  Opdracht10.java  Opdracht11.java  Opdracht2.java  Opdracht3.java  Opdracht4.java  Opdracht5.java  Opdracht6.java  Opdracht7.java  Opdracht8.java  Opdracht9.java
Jaar 1/Introductie Programmeren/src/week_6/: fill.java
Jaar 2/: README.md
Jaar 2/C++/Werkcollege/OpdrachtBeschrijving/5.operators/: 00opdracht5.depend  00opdracht5.layout  CMakeLists.txt  Person.cc  TestLess.cc  TestPrint.h
Jaar 2/C++/Werkcollege/OpdrachtBeschrijving/5.operators/docs/: Marriage_8h_source.html  Person_8h.html  Person_8h.js  TestLess_8cc.html  TestLess_8h__dep__incl.map  TestLess_8h_source.html  TestPrint_8h__incl.map  UnitTest_8cc__incl.map  assert__error_8cc.html  assert__error_8h__dep__incl.md5  classMarriage-members.html  classTestPrint.html  classUnitTest__inherit__graph.map  classes.html  common_8h__dep__incl.map  functions_type.html  globals.html  hierarchy.html  inherit_graph_2.map  main_8cc.html
Jaar 2/Compilers en operating systems/: README.md
Jaar 2/Compilers en operating systems/Compiler/DutchJava/: WorkingFile2.djpp  WorkingFile2.jasmin
Jaar 2/Compilers en operating systems/Compiler/Niet werkende programma's/: NotWorkingFile4.djpp
Jaar 2/Compilers en operating systems/Shell/: CMakeLists.txt
Jaar 2/Compilers en operating systems/Shell/src/: MyVisitor.cpp  main.cpp
Jaar 2/Complexiteit en algoritmiek/: README.md
Jaar 2/Complexiteit en algoritmiek/Opdracht 1/opdracht1/: Verslag.docx
Jaar 2/Complexiteit en algoritmiek/opdracht 2/src/: API.java
Jaar 2/Complexiteit en algoritmiek/spelbord/src/: BoardLoader.java  Color.java  Node.java
Jaar 2/Concurrency/: README.md
Jaar 2/Concurrency/TE35GrevelinkKlarenbeekOpgave3/src/: Buyer.java  Hiswa.java  Visitor.java
Jaar 2/Concurrency/TE35GrevelinkKlarenbeekOpgave4/src/: AgentActor.java  AgentKind.java  Seller.java
Jaar 2/Concurrency/TE35KlarenbeekGrevelinkOpgave2/src/: Consultation.java  Developers.java  Person.java  Project.java
Jaar 2/Internettechnologie/eindopdracht/htdocs/: contact.html  index.html
Jaar 2/Internettechnologie/eindopdracht/src/: WebServer.java
Jaar 2/Project Netwerken/: .gitignore
Jaar 2/Project Netwerken/Node/: CMakeLists.txt
Jaar 2/Project Netwerken/Node/RSAKeys/: GenerateKeypair.h
Jaar 2/Project Netwerken/Node/UdpEcho/: server.cpp  server.h
Jaar 2/Project Netwerken/Node/cryptopp/: misc.h
Jaar 2/Project Netwerken/Node/libs/: json.hpp
Jaar 2/Project Netwerken/Server/: CMakeLists.txt
Jaar 2/Project Netwerken/Server/Server/Debug/: vc140.idb
Jaar 2/Project Netwerken/Server/Server/Debug/Server.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
Jaar 2/Project Netwerken/Server/Server/x64/Debug/Server.tlog/: CL.read.1.tlog  link.read.1.tlog
Jaar 2/webtech/Opdracht 1/: login.html
Jaar 2/webtech/Opdracht 1/WEB-INF/: web.xml
Jaar 2/webtech/Opdracht 1/web/: register.html
Jaar 2/webtech/Opdracht 2/: about.html
Jaar 2/webtech/Opdracht 3/model/: moviesModel.js
Jaar 2/webtech/Opdracht 3/resources/: ratings.js
Jaar 2/webtech/Opdracht 3/test/: moviesTest.js
Jaar 2/webtech/Òpdracht 4/: package.json
Jaar 2/webtech/Òpdracht 4/model/: ratingsModel.js
Jaar 2/webtech/Òpdracht 4/test/: ratingsTest.js  usersTest.js
Jaar_2/C++/Werkcollege/OpdrachtBeschrijving/: makefile
Jaar_2/C++/Werkcollege/OpdrachtBeschrijving/exercises/6.employees/: 00opdracht6.depend  00opdracht6.layout  CMakeLists.txt  Employee.cc  Keeper.cc  Keeper.h  Main.cc  Manager.cc  bad-spare.txt  doxyfile  good.txt
Jaar_2/C++/Werkcollege/OpdrachtBeschrijving/exercises/6.employees/docs/: Animal_8cc.html  Animal_8cc.js  Animal_8h__incl.md5  Zoo_8h_source.html  annotated.html  ansi_8h.html  ansi_8h__incl.map  ansi_8h__incl.md5  ansi_8h_source.html  assert__error_8h__dep__incl.map  assert__error_8h_source.html  asserts_8h.html  asserts_8h__dep__incl.md5  classAnimal.html  classAnimal.js  classZoo-members.html  files.html  globals_func.html  hierarchy.js  index.html  inherit_graph_2.map  navtreeindex0.js  where_8h_source.html
Jaar_2/C++/Werkcollege/OpdrachtBeschrijving/exercises/6.employees/include/: Administrator.h
Jaar_2/C++/Werkcollege/OpdrachtBeschrijving/exercises/6.employees/src/: Administrator.cc
Jaar_2/Compilers en operating systems/: README.md
Jaar_2/Compilers en operating systems/Compiler/: README.txt
Jaar_2/Compilers en operating systems/Compiler/DutchJava/: DutchJava.g4
Jaar_2/Compilers en operating systems/Compiler/Niet werkende programma's/: NotWorkingFile1.djpp  NotWorkingFile2.djpp  NotWorkingFile3.djpp  NotWorkingFile5.djpp
Jaar_2/Compilers en operating systems/Shell/: ShellGrammar.g4
Jaar_2/Compilers en operating systems/Shell/src/: Commands.cpp  Commands.h  Helpers.cpp  Helpers.h  MyVisitor.h
Jaar_2/Complexiteit en algoritmiek/opdracht 2/src/: Heap.java  RsHeap.java  SimulatedFile.java
Jaar_2/Complexiteit en algoritmiek/spelbord/: board
Jaar_2/Complexiteit en algoritmiek/spelbord/src/: Api.java  Board.java  Game.java  Link.java  (+1 more)
Jaar_2/Internettechnologie/eindopdracht/: verslag internettech eindopdracht.docx
Jaar_2/Project Netwerken/Server/: Server.sln
Jaar_2/webtech/Opdracht 2/: contact.html  faq.html  index.html
Jaar_2/webtech/Opdracht 3/: index.js  package.json
Jaar_2/webtech/Òpdracht 4/: .jshintrc  index.js
(+3427 files in other folders)
